--- a/doc/internals/datastructures.tex
+++ b/doc/internals/datastructures.tex
@@ -1,8 +1,11 @@
-\documentclass[a4paper,twocolumn]{article}
+\documentclass[a4paper]{article}
 \usepackage{times}
-\usepackage[margin=0.4in]{geometry}
-%~ \usepackage{fullpage}
+\usepackage[left=0.45in,right=0.45in,top=0.7in,bottom=1in]{geometry}
+\usepackage{graphicx}
+\usepackage{multicol}
 \usepackage{xspace}
+
+\usepackage[scaled=0.95]{inconsolata}
 
 \title{libt3highlight Internal Data-Structure Design}
 \author{G.P. Halkes}
@@ -17,6 +20,7 @@
 \begin{document}
 \maketitle
 
+\begin{multicols}{2}
 \section{Conventions}
 In this document we use the following conventions. Names refering to items in a
 language definition file are written using {\it italics}. Names of data
@@ -55,17 +59,17 @@ the {\tt t3_highlight_t}s \state list), are not the same as the states saved in
 the {\tt t3_highlight_match_t}. See Section~\ref{sec:state-tree} for details on
 the correspondence between them.
 
-\footnotetext[1]{ The {\tt regex} member will be set to {\tt NULL} for dynamic
+\footnotetext[1]{The {\tt regex} member will be set to {\tt NULL} for dynamic
 {\it end} patterns and for {\it use} patterns. These can be distinguished by
 the setting of the {\tt next_state} member, which will be {\tt EXIT_STATE} or
 less for dynamic {\it end} patterns.}
 
 \subsection{Use Patterns}
-A {\it use} pattern is signified by a {\tt NULL} {\tt regex} member in the
-\highlight\footnotemark[1]. This allows referencing other patterns without
-incurring a large memory penalty. Furthermore, it allows for cyclic
-referencing, which can be useful for recursive embeddings such as counting
-parenthesis.
+A {\it use} pattern is saved as a separate \state, signified by a {\tt NULL}
+{\tt regex} member in the \highlight\footnotemark[1]. This allows referencing
+other patterns without incurring a large memory penalty. Furthermore, it allows
+for cyclic referencing, which can be useful for recursive embeddings such as
+counting parenthesis.
 
 \subsection{Dynamic End Patterns}
 If the state uses a dynamic {\it end} pattern, the regular expression for the
@@ -74,18 +78,78 @@ pattern. To signal this, the {\tt regex} member of the {\it end} pattern's \high
 to {\tt NULL}\footnotemark[1]. The actual end pattern is created at run time
 and stored in the {\tt state_mapping_t} (c.f.\ Section~\ref{sec:state-tree}).
 
+\footnotetext[2]{The {\tt dynamic} member will be set for both dynamic end
+patterns and for on-entry states.}
+
 The \highlight corresponding to {\it start} pattern will have its {\tt dynamic}
 member set to a {\tt dynamic_highlight_t}, to hold the supplementary data
-required. Specifically, it will hold the name to be extracted (c.f.\ {\it
-extract}) and the {\it end} pattern.
+required\footnotemark[2]. Specifically, it will hold the name to be extracted
+(c.f.\ {\it extract}) and the {\it end} pattern.
 
 \subsection{On-entry States}
-
+On-entry states are saved as a list in the {\tt dynamic} member\footnotemark[2].
+For each on-entry state, the index in the \state{}s list is saved. Furthermore,
+because on-entry states can use dynamic end patterns referreing to the
+enclosing normal state, each on-entry state optionally holds the end pattern
+required for matching the end state.
 
 \section{Matching and the Flattened State Tree\label{sec:state-tree}}
+The main design goal of libt3highlight is to have a single integer state at the
+start of each line. Originally, this was achieved by having a simple state
+tree, where each node was numbered and had a parent index. However, with the
+introduction of dynamic end patterns, this could not work anymore. Thus instead
+of using the \state list index as the start-of-line state, an intermediate
+data structure was introduced. This is the flattened state tree (FST), which is
+stored in the t3_highlight_match_t.
 
-\subsection{Use Patterns}
-\subsection{Dynamic End Patterns}
-\subsection{On-entry States}
+The FST is a vector of {\tt state_mapping_t} objects. Each {\tt
+state_mapping_t} holds an index in the \state{}s list in the {\tt
+t3_highlight_t} structure ({\tt highlight}), a {\tt parent} member referring to
+the previous FST state visited in matching, and an optional {\tt dynamic}
+member holding data about dynamic end patterns.
+
+The {\tt parent} member thus refers to the {\tt state_mapping_t} object that
+represents the previous FST state, and transitively to the whole path taken in
+the \state tree. This is important when trying to find an existing entry in the
+{\tt state_mapping_t} list which corresponds to the next state. Three conditions
+must be met for the entry to be matched:
+
+\begin{itemize}
+\item The {\tt parent} member must equal the current {\tt state_mapping_t}.
+\item The {\tt highlight} member must equal the {\tt next_state} member in the
+	\highlight.
+\item The {\tt dynamic} must be unset in both the {\tt state_mapping_t} and the
+	\highlight, or the {\tt extracted} member in the {\tt dynamic_state_t}
+	referred to by the {\tt state_mapping_t} must be equal to the text
+	extracted from the match.
+\end{itemize}
+
+When these three conditions are met, the existing FST-state can be reused. If
+no FST state exists which matches the new state, a new state will be created.
+It may seem that this will create a large and ever-growing number of FST states.
+However, note that for the case where the highlighting patterns form a simple
+tree without dynamic patterns, the maximum number of states is equal to the
+number of \state{}s in the {\tt t3_highlight_t}. Only for circular {\it use}
+patterns and dynamic end patterns can a potentially infinite number of states
+be created. But, even though this is possible, it is very unlikely that the
+number of states grows beyond a reasonable number in practice.
+
+\begin{description}
+\item[Use patterns] are never used in the flattened state tree. When a
+\state corresponding to a {\it use} pattern is encountered during matching, a
+recursion step is made, which checks all the patterns in the {\it use} pattern
+and returns the results.
+\item[Dynamic-end patterns] require that a new regex is compiled based on the
+matched text and the saved regex pattern. This is a fairly expensive operation.
+\item[On-entry states] are simply added to the FST like any other state, when
+a state is entered which specifies them.
+\end{description}
+\end{multicols}
+
+\begin{figure}
+\centering
+\includegraphics[width=.9\textwidth]{structs}
+\caption{An overview of the data structures used in libt3highlight.}
+\end{figure}
 
 \end{document}
